--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <table>
         <tr>
-            <td><img src="./image/images.jpg" alt="profil hafez image"></td>
+            <td><img src="images.jpg" alt="profil hafez image"></td>
             <td><h1> hafez shirazi</h1>
     <p><em>He was an Iranian Persian-speaking poet. <br>
     <strong><a href="https://fa.wikipedia.org/wiki/%D8%AD%D8%A7%D9%81%D8%B8">Most of his poems are sonnets.</a></strong></em></p>
